fix problem with flickering and lack of whitespace. Added text box block

--- a/components/block-template/src/App.css
+++ b/components/block-template/src/App.css
@@ -60,10 +60,11 @@
   margin-bottom: 30px;
 }
 
-.blocks-container {
+.blocks-container > div {
   margin-top: 20px;
-  border-top: 1px solid #ccc;
   padding-top: 20px;
+  margin-bottom: 50px;
+
 }
 
 select, button {
